@@ -47,7 +47,8 @@ import java.text.ParseException;
 public class DatabaseInfo {
 
     public final static int COUNTRY_EDITION = 1;
-    public final static int REGION_EDITION = 7;
+    public final static int REGION_EDITION_REV0 = 7;
+    public final static int REGION_EDITION_REV1 = 3;
     public final static int CITY_EDITION_REV0 = 6;
     public final static int CITY_EDITION_REV1 = 2;
     public final static int ORG_EDITION = 5;
