@@ -1,7 +1,9 @@
+	- Added support for Maxmind GeoIP Region (Frank Mather)
+
 1.1.4  October 21st 2003
-	- Added support for distributed queries
+	- Added support for distributed queries (Frank Mather)
 	- Massive code cleanup (Matt Tucker)
-	- Added support for DMA code and Area codes
+	- Added support for DMA code and Area codes (Frank Mather)
 
 1.1.3  June 9th 2003
 	- Added support for GeoIP Organization and ISP databases
